--- a/YemekMenu/pom.xml
+++ b/YemekMenu/pom.xml
@@ -16,6 +16,19 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+			
 		</plugins>
 	</build>
 	<dependencies>
@@ -38,11 +51,6 @@
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
 			<version>7.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mnode.ical4j</groupId>
-			<artifactId>ical4j</artifactId>
-			<version>1.0.6</version>
 		</dependency>
 	</dependencies>
 
